layout issues

--- a/sign/styles/app.css
+++ b/sign/styles/app.css
@@ -184,7 +184,8 @@ img {
 
     .header,
     .text,
-    .title-float-right {
+    .title-float-right,
+    .image-float-right {
         float: right;
     }
 }
